修复打包错误的bug
Signed-off-by: Ding_Yuhuang <164848632@qq.com>

--- a/src/项目打包构建.md
+++ b/src/项目打包构建.md
@@ -3,3 +3,5 @@
 使用webpack打包，安装tomcat
 复制dist目录下bundle和index
 + 在apache-tomcat-8.5.51\webapps 目录下新建一个文件夹，放入bundles和html文件
++ 启用tomcat的gz压缩https://blog.csdn.net/zemochen/article/details/42065363
++ 映射到外网 可以采用ngrok
